# qwen3-tts-triton

./: .gitignore  .gitmessage.txt  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  Makefile  README.md  README_ko.md  pyproject.toml
.claude/agents/: architect.md  architect_ko.md  build-error-resolver.md  build-error-resolver_ko.md  code-quality-analyzer.md  code-quality-analyzer_ko.md  code-reviewer.md  code-reviewer_ko.md  doc-updater.md  doc-updater_ko.md  e2e-runner.md  e2e-runner_ko.md  planner.md  planner_ko.md  refactor-cleaner.md  refactor-cleaner_ko.md  security-reviewer.md  security-reviewer_ko.md  tdd-guide.md  tdd-guide_ko.md
.claude/commands/: build-fix.md  build-fix_ko.md  cancel-ralph.md  cancel-ralph_ko.md  code-quality.md  code-quality_ko.md  code-review.md  code-review_ko.md  complexity.md  complexity_ko.md  dead-code.md  dead-code_ko.md  e2e.md  e2e_ko.md  learn.md  learn_ko.md  plan.md  plan_ko.md  ralph-loop.md  ralph-loop_ko.md  refactor-clean.md  refactor-clean_ko.md  security-check.md  security-check_ko.md  tdd.md  tdd_ko.md
.claude/hooks/: README.md  README_ko.md  hooks.json
.claude/mcp-configs/: README.md  README_ko.md  database.json  filesystem.json  github.json  memory.json
.claude/rules/: coding-style.md  coding-style_ko.md  git-workflow.md  git-workflow_ko.md  performance.md  performance_ko.md  ralph-loop.md  ralph-loop_ko.md  security.md  security_ko.md  testing.md  testing_ko.md
.claude/skills/: autonomous-agent.md  autonomous-agent_ko.md  complexity-patterns.md  complexity-patterns_ko.md  project-structure.md  project-structure_ko.md  python-patterns.md  python-patterns_ko.md  ralph-workflow.md  ralph-workflow_ko.md  uv-ruff-ty-workflow.md  uv-ruff-ty-workflow_ko.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  gpu-test.yml  publish.yml
assets/audio_samples/: README.md  metadata.json
assets/reference_audio/: README.md
benchmark/: __init__.py  analyze_per.py  bench_batched_matrix.py  bench_batched_runner.py  bench_e2e.py  bench_e2e_fixed.py  bench_e2e_long.py  bench_kernels.py  bench_kv_memory.py  bench_partial.py  bench_q8_compile.py  bench_speedup.py  bench_throughput_scaling.py  eval_config.py  eval_partial.py  eval_quality.py  eval_tongue_twister.py  profiler.py  run_verification.py
benchmark/results/: batched_matrix.json  batched_runner.json  e2e_benchmarks.json  e2e_fixed_benchmarks.json  e2e_long_benchmarks.json  eval_partial_fast_0-20_0-24.json  eval_partial_full_0-20_0-24.json  eval_twister_full_0-24.json  kernel_benchmarks.json  kv_memory_benchmark.json  partial_sweep_0-16_0-20_0-22_0-24.json  per_analysis.json  throughput_scaling.json  tier2_metrics.json  tier3_batched_full_en.json  tier3_batched_full_multi.json  tier3_batched_hf_fast_en.json  tier3_batched_hf_full_en.json  tier3_batched_quality.json  tier3_batched_vs_single.json  tier3_fast_multi.json  tier3_full_multi.json  verification_report.json
docs/: batch-serving.md  batch-serving_ko.md  benchmark_results_en.md  benchmark_results_ko.md  docker-deployment.md  eval-pipeline.md  pypi-release.md  triton-kernel-deep-dive.md
scripts/: generate_bench_tables.py  generate_samples.py
src/qwen3_tts_triton/: __init__.py
tests/: TEST.md  conftest.py  test_batched_runner.py  test_eval_quality_defaults.py  test_generate_bench_tables.py  test_makefile_targets.py  test_model_parity.py  test_partial_patching.py  test_release_artifacts.py
tests/kernels/: conftest.py  test_rope.py  (+6 more)
ui/: __init__.py  app.py  charts.py  gpu_info.py  i18n.py  sidebar.py  tab_benchmarks.py  tab_inference.py  tab_overview.py  tab_partial.py  tab_samples.py  tab_tier3_audio.py  tab_verification.py  utils.py
(+24 files in other folders)
